name:               pvp-site
version:            1.0
build-type:         Simple
cabal-version:      >= 2.0
tested-with:        GHC == 8.0.2, GHC == 8.2.1

executable pvp-site
  main-is:          site.hs
  hs-source-dirs:   src/
  build-depends:    base          ^>= 4.9.0 || ^>= 4.10.0
                  , hakyll        ^>= 4.9.2
                  , pandoc        ^>= 1.19.2
                  , pandoc-types  ^>= 1.17
  ghc-options:      -threaded
  default-language: Haskell2010
