cabal-version:      2.2
name:               pvp-site
version:            1.0
tested-with:        GHC == 8.0.2 || == 8.2.2 || == 8.4.4 || == 8.6.3

executable pvp-site
  main-is:          site.hs
  hs-source-dirs:   src/
  build-depends:    base          ^>= 4.9.0.0 || ^>= 4.10.0.0 || ^>= 4.11.0.0 || ^>= 4.12.0.0
                  , hakyll        ^>= 4.12.5.0
                  , pandoc        ^>= 2.6
                  , pandoc-types  ^>= 1.17.5.4
  ghc-options:      -threaded
  default-language: Haskell2010
